# reflex-loadbalancer

./: CMakeLists.txt  README.md  main.cpp
configs/: loadbalancer.yml
include/: lb_strategy.h  session.h  session_manager.h
include/configuration/: config.h
include/exceptions/: exceptions.h
include/lb_strategy/: lb_round_robin_strategy.h  lb_strategy.h  pool.h
include/logger/: logger.h
include/sessions/: session.h  session_factory.h  ssl_sessions.h  tcp_session_factory.h  tcp_sessions.h  udp_sessions.h
src/: connection.cpp  lb_strategy.cpp  session.cpp  session_manager.cpp
src/configuration/: config.cpp
src/lb_strategy/: lb_strategy.cpp  pool.cpp
src/logger/: logger.cpp
src/sessions/: session.cpp  tcp_session.cpp  tcp_session_factory.cpp
test/benchmark/: haproxy.cfg  server.py
